force-app/main/default/objects/VDT_Vault_Document_Record_Type__mdt/VDT_Vault_Document_Record_Type__mdt.object-meta.xml
<CustomObject>
    <label>VDT Vault Document Record Type</label>
    <pluralLabel>VDT Vault Document Record Types</pluralLabel>
</CustomObject>