force-app/main/default/objects/VDT_Vault_Document_Record_Type__mdt/fields/CRM_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>CRM_Record_Type__c</fullName>
    <label>CRM Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>