force-app/main/default/objects/VDT_Vault_Document_Record_Type__mdt/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <length>25</length>
    <type>Text</type>
</CustomField>