force-app/main/default/objects/VDT_Vault_Document_Record_Type__mdt/fields/Vault_Type__c.field-meta.xml
<CustomField>
    <fullName>Vault_Type__c</fullName>
    <label>Vault Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>